fixed login styles on small screens

--- a/src/app2/main/auth-renderer/styles/style.scss
+++ b/src/app2/main/auth-renderer/styles/style.scss
@@ -31,6 +31,7 @@
       border-radius: 0.35rem;
       transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     }
+    padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x) !important;
   }
 }
 
